# docuquery

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 06b0fd3bc657_add_organization_id_to_users.py  7bb7620221ff_create_initial_tables.py
app/: main.py
app/api/v1/: auth.py  documents.py  query.py  usage.py
app/core/: config.py  multi_tenant.py  security.py
app/db/: models.py  session.py
app/services/: cache.py  chunker.py  embeddings.py  llm.py  processor.py  qdrant.py  rag.py  storage.py  text_extractor.py
docs/: project_requirements.md  test_doc.txt
frontend/: Dockerfile  package-lock.json
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/query/: page.tsx
frontend/src/app/dashboard/usage/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  auth.ts
infrastructure/terraform/: ec2_qdrant.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  security.tf  sqs.tf  variables.tf  vpc.tf
tests/: conftest.py
tests/unit/: test_cache.py  test_chunker.py  test_llm.py  test_rag.py  test_security.py
